исправил опечатку в атрибуте

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <header class="main-header">
         <nav class="main-navigation">
             <a class="main-header-logo">
-                <img srg="#" alt="Логотип барбершопа " Бородинский"">
+                <img src="#" alt="Логотип барбершопа " Бородинский"">
             </a>
             <ul class="site-navigation">
                 <li><a href="#">Информация</a></li>
                 <li><a href="#">Новости</a></li>
                 <li><a href="#">Прайс-лист</a></li>
-                <li><a href="#">Магазин</a></li>
+                <li><a href="catalog.html">Магазин</a></li>
                 <li><a href="#">Контакты</a></li>
             </ul>
             <ul class="user-navigation">
