--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="main-header">
         <nav class="main-navigation">
             <a class="main-header-logo">
-                <img src="#" alt="Логотип барбершопа " Бородинский"">
+                <img src="#" alt="Логотип барбершопа «Бородинский»">
             </a>
             <ul class="site-navigation">
                 <li><a href="#">Информация</a></li>
@@ -109,10 +109,19 @@
                 <b>Разработано:</b>
                 <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
             </p>
-            
         </footer>
     </main>
 
+    <section class="modal-login">
+        <h2>Личный кабинет</h2>
+        <p>Введите пожалуйста свой логин и пароль</p>
+        <!--       Форма     -->
+        <span class="modal-close">x</span>
+    </section>
+    <section class="modal modal-map">
+            <h2 class="visually-hidden">Как до нас добраться</h2>
+            <span class="modal-close">x</span>
+        </section>
 </body>
 
 </html>
