добавил изображения из макетов

--- a/price.html
+++ b/price.html
@@ -10,7 +10,7 @@
     <header class="main-header">
         <nav class="main-navigation">
             <a class="main-header-logo" href="index.html">
-                <img src="#" alt="Логотип барбершопа " Бородинский"">
+                <img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
             </a>
             <ul class="site-navigation">
                 <li><a href="#">Информация</a></li>
@@ -74,25 +74,31 @@
         </section>
 
         <footer class="main-footer">
-            <p class="footer-contacts">
-                Барбершоп «Бородинский»<br>
-                Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-                <a href="#">Как нас найти?</a><br>
-                Телефон: +7 (812) 666-02-66
-            </p>
-            <div class="footer-social">
-                <b>Давайте дружить</b>
-                <ul>
-                    <li><a class="social-button" href="#">Вконтакте</a></li>
-                    <li><a class="social-button" href="#">Фейсбук</a></li>
-                    <li><a class="social-button" href="#">Инстаграм</a></li>
-                </ul>
-            </div>
-            <p class="footer-copyright">
-                <b>Разработано:</b>
-                <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
-            </p>
-        </footer>
+			<p class="footer-contacts">
+				Барбершоп «Бородинский»<br>
+				Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+				<a href="#">Как нас найти?</a><br>
+				Телефон: +7 (812) 666-02-66
+			</p>
+			<div class="footer-social">
+				<b>Давайте дружить</b>
+				<ul>
+					<li>
+						<a class="social-button" href="#"><img src="img/social-vk.svg" width="27" height="15" alt="Вконтакте">Вконтакте</a>
+					</li>
+					<li>
+						<a class="social-button" href="#"><img src="img/social-facebook.svg" width="19" height="22" alt="Фейсбук">Фейсбук</a>
+					</li>
+					<li>
+						<a class="social-button" href="#"><img src="img/social-instagram.svg" width="20" height="20" alt="Инстаграм">Инстаграм</a>
+					</li>
+				</ul>
+			</div>
+			<p class="footer-copyright">
+				<b>Разработано:</b>
+				<a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+			</p>
+		</footer>
     </main>
 
     <section class="modal-login">
