--- a/catalog-item.html
+++ b/catalog-item.html
@@ -1,98 +1,104 @@
 <DOCTYPE! html>
-    <html lang="ru">
+	<html lang="ru">
 
-    <head>
-        <meta charset="utf-8">
-        <title>Набор для путешествий «Baxter of California»</title>
-    </head>
+	<head>
+		<meta charset="utf-8">
+		<title>Набор для путешествий «Baxter of California»</title>
+	</head>
 
-    <body>
-        <header class="main-header">
-            <nav class="main-navigation">
-                <a class="main-header-logo" href="index.html">
-                    <img src="#" alt="Логотип барбершопа " Бородинский"">
-                </a>
-                <ul class="site-navigation">
-                    <li><a href="#">Информация</a></li>
-                    <li><a href="#">Новости</a></li>
-                    <li><a href="#">Прайс-лист</a></li>
-                    <li class="site-navigation-current"><a href="#">Магазин</a></li>
-                    <li><a href="#">Контакты</a></li>
-                </ul>
-                <ul class="user-navigation">
-                    <li class="login-link">Вход</li>
-                </ul>
-            </nav>
-        </header>
+	<body>
+		<header class="main-header">
+			<nav class="main-navigation">
+				<a class="main-header-logo" href="index.html">
+					<img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
+				</a>
+				<ul class="site-navigation">
+					<li><a href="#">Информация</a></li>
+					<li><a href="#">Новости</a></li>
+					<li><a href="#">Прайс-лист</a></li>
+					<li class="site-navigation-current"><a href="#">Магазин</a></li>
+					<li><a href="#">Контакты</a></li>
+				</ul>
+				<ul class="user-navigation">
+					<li class="login-link">Вход</li>
+				</ul>
+			</nav>
+		</header>
 
-        <main class="container">
-            <h1 class="page-title">Набор для путешествий «Baxter of California»</h1>
+		<main class="container">
+			<h1 class="page-title">Набор для путешествий «Baxter of California»</h1>
 
-            <ul class="breadcrumbs">
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="#">Магазин</a></li>
-                <li><a href="catalog.html">Средства для ухода</a></li>
-                <li class="breadcrumbs-current">Набор для путешествий «Baxter of California»</li>
-            </ul>
+			<ul class="breadcrumbs">
+				<li><a href="index.html">Главная</a></li>
+				<li><a href="#">Магазин</a></li>
+				<li><a href="catalog.html">Средства для ухода</a></li>
+				<li class="breadcrumbs-current">Набор для путешествий «Baxter of California»</li>
+			</ul>
 
-            <section class="product-photos">
-                <h2 class="visually-hidden">Изображения товара</h2>
-                <p class="product-photo-full">
-                    <img src="#" alt="Фото всего набора">
-                </p>
-                <ul class="product-photo-preview">
-                    <li><img src="#" alt="Фото в анфас"></li>
-                    <li><img src="#" alt="Фото сумки"></li>
-                    <li><img src="#" alt="Фото в профиль"></li>
-                </ul>
-            </section>
+			<section class="product-photos">
+				<h2 class="visually-hidden">Изображения товара</h2>
+				<p class="product-photo-full">
+					<img src="img/product-1-big.jpg" width="460" height="498" alt="Фото всего набора">
+				</p>
+				<ul class="product-photo-preview">
+					<li><img src="img/product-7.jpg" width="140" height="149" alt="Фото в анфас"></li>
+					<li><img src="img/product-8.jpg" width="140" height="149" alt="Фото сумки"></li>
+					<li><img src="img/product-1-small.jpg" width="140" height="149" alt="Фото в профиль"></li>
+				</ul>
+			</section>
 
-            <section class="product-info">
-                <h2 class="visually-hidden">Описание товара</h2>
-                <p class="product-availability">Есть в наличие</p>
-                <p class="product-article">Артикул: dexter-ae</p>
-                <p class="product-text">Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
-                </p>
-                <p class="product-price">
-                    <b>2900 ₽</b>
-                    <a class="button" href="#">Купить</a>
-                </p>
-                <h3>В набор входят:</h3>
-                <ul>
-                    <li>Средство для умывания (50 мл)</li>
-                    <li>Увлажняющий крем (50 мл)</li>
-                    <li>Крем для бритья (50 мл)</li>
-                    <li>Крем после бритья, шампунь (50 мл)</li>
-                    <li>Удобная кожаная косметичка</li>
-                </ul>
-            </section>
+			<section class="product-info">
+				<h2 class="visually-hidden">Описание товара</h2>
+				<p class="product-availability">Есть в наличие</p>
+				<p class="product-article">Артикул: dexter-ae</p>
+				<p class="product-text">Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
+				</p>
+				<p class="product-price">
+					<b>2900 ₽</b>
+					<a class="button" href="#">Купить</a>
+				</p>
+				<h3>В набор входят:</h3>
+				<ul>
+					<li>Средство для умывания (50 мл)</li>
+					<li>Увлажняющий крем (50 мл)</li>
+					<li>Крем для бритья (50 мл)</li>
+					<li>Крем после бритья, шампунь (50 мл)</li>
+					<li>Удобная кожаная косметичка</li>
+				</ul>
+			</section>
 
-            <footer class="main-footer">
-                <p class="footer-contacts">
-                    Барбершоп «Бородинский»<br>
-                    Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-                    <a href="#">Как нас найти?</a><br>
-                    Телефон: +7 (812) 666-02-66
-                </p>
-                <div class="footer-social">
-                    <b>Давайте дружить</b>
-                    <ul>
-                        <li><a class="social-button" href="#">Вконтакте</a></li>
-                        <li><a class="social-button" href="#">Фейсбук</a></li>
-                        <li><a class="social-button" href="#">Инстаграм</a></li>
-                    </ul>
-                </div>
-                <p class="footer-copyright">
-                    <b>Разработано:</b>
-                    <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
-                </p>
-            </footer>
-        </main>
+			<footer class="main-footer">
+				<p class="footer-contacts">
+					Барбершоп «Бородинский»<br>
+					Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+					<a href="#">Как нас найти?</a><br>
+					Телефон: +7 (812) 666-02-66
+				</p>
+				<div class="footer-social">
+					<b>Давайте дружить</b>
+					<ul>
+						<li>
+							<a class="social-button" href="#"><img src="img/social-vk.svg" width="27" height="15" alt="Вконтакте">Вконтакте</a>
+						</li>
+						<li>
+							<a class="social-button" href="#"><img src="img/social-facebook.svg" width="19" height="22" alt="Фейсбук">Фейсбук</a>
+						</li>
+						<li>
+							<a class="social-button" href="#"><img src="img/social-instagram.svg" width="20" height="20" alt="Инстаграм">Инстаграм</a>
+						</li>
+					</ul>
+				</div>
+				<p class="footer-copyright">
+					<b>Разработано:</b>
+					<a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+				</p>
+			</footer>
+		</main>
 
-        <section class="modal-login">
-            <h2>Личный кабинет</h2>
-            <p>Введите пожалуйста свой логин и пароль</p>
-            <!--       Форма     -->
-            <span class="modal-close">x</span>
-        </section>
-    </body>
+		<section class="modal-login">
+			<h2>Личный кабинет</h2>
+			<p>Введите пожалуйста свой логин и пароль</p>
+			<!--       Форма     -->
+			<span class="modal-close">x</span>
+		</section>
+	</body>
